# CredentialGenerator

./: .gitignore
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
